--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,7 @@ html {
   position: relative;
   display: inline-block;
   cursor: pointer;
-  transition: all 0.1s ease-in-out;
+  transition: all 0.3s ease-in-out;
   z-index: 1;
 }
 
@@ -134,7 +134,7 @@ html {
 .tool-item.clicked {
   color: #ffffff;
   font-weight: 900;
-  transition: all 0.1s; 
+  transition: all 0.3s; 
   transform: scale(0.15);
   text-shadow:
     0 0 5px #6ec1ff,
@@ -165,7 +165,7 @@ html {
   100% { background-position: 100px 100px; }
 }
 
-/* Disable hover effects on touch devices (mobile) 
+ /*Disable hover effects on touch devices (mobile)*/
 @media (hover: none) and (pointer: coarse) {
   .tool-item:hover {
     text-shadow: none;
@@ -174,4 +174,3 @@ html {
     font-weight: 500;
   }
 }
-*/
